--- a/bib_shared.bib
+++ b/bib_shared.bib
@@ -41,6 +41,84 @@
   url     = {https://github.com/civic-interconnect/cep-theory}
 }
 
+
+% ============================================================
+% === FOUNDATIONS: Core Ontological Foundations
+% ============================================================
+
+% WHY: Standard reference for core ontological principles and BFO
+
+@book{smith2015bfo,
+  title     = {Building Ontologies with Basic Formal Ontology},
+  author    = {Arp, Robert and Smith, Barry and Spear, Andrew D},
+  year      = {2015},
+  publisher = {MIT Press}
+}
+
+@inproceedings{masolo2004wonderweb,
+  author = {Claudio Masolo and Stefano Borgo and Aldo Gangemi and Nicola Guarino and Alessandro Oltramari},
+  title  = {WonderWeb Deliverable D18: Ontology Library},
+  year   = {2004}
+}
+
+@article{guarino1998roles,
+  author  = {Nicola Guarino},
+  title   = {On the Ontological Status of Roles},
+  journal = {Applied Ontology},
+  year    = {1998}
+}
+
+@article{guarino2002evaluating,
+  title   = {Evaluating Ontological Decisions with {OntoClean}},
+  author  = {Guarino, Nicola and Welty, Christopher A},
+  journal = {Communications of the ACM},
+  volume  = {45},
+  number  = {2},
+  pages   = {61--65},
+  year    = {2002}
+}
+
+@incollection{guarino2009ontology,
+  title     = {What is an Ontology?},
+  author    = {Guarino, Nicola and Oberle, Daniel and Staab, Steffen},
+  booktitle = {Handbook on Ontologies},
+  pages     = {1--17},
+  year      = {2009},
+  publisher = {Springer}
+}
+
+@techreport{lebo2013prov,
+  title       = {{PROV-O}: The {PROV} Ontology},
+  author      = {Lebo, Timothy and Sahoo, Satya and McGuinness, Deborah},
+  year        = {2013},
+  institution = {W3C},
+  note        = {W3C Recommendation},
+  url         = {https://www.w3.org/TR/prov-o/}
+}
+
+@inproceedings{hoekstra2007lkif,
+  title     = {{LKIF Core}: Principled Ontology Development for the Legal Domain},
+  author    = {Hoekstra, Rinke and Breuker, Joost and Di Bello, Marcello and Boer, Alexander},
+  booktitle = {Proceedings of the Conference on Law, Ontologies and the Semantic Web},
+  year      = {2007}
+}
+
+@article{bennett2013fibo,
+  title   = {The Financial Industry Business Ontology},
+  author  = {Bennett, Mike},
+  journal = {Enterprise Data Management Council},
+  year    = {2013}
+}
+
+@article{ceusters2012iao,
+  title   = {An Information Artifact Ontology Perspective on Data Collections and Associated Representational Artifacts},
+  author  = {Ceusters, Werner},
+  journal = {Studies in Health Technology and Informatics},
+  volume  = {180},
+  pages   = {68--72},
+  year    = {2012}
+}
+
 % ============================================================
 % === FOUNDATIONAL: Core Mathematical and Semantic Foundations
 % ============================================================
