--- a/paper01/08_value.tex
+++ b/paper01/08_value.tex
@@ -41,8 +41,8 @@ of the instruments or events that give rise to it.
 
 Observations may be associated with Actors, Sites, Jurisdictions, or defined
 populations through typed relationships.
-For example, a health outcome observation may be associated with a jurisdiction 
-and a demographic group, while an emissions intensity observation may be 
+For example, a health outcome observation may be associated with a jurisdiction
+and a demographic group, while an emissions intensity observation may be
 associated with a site or facility.
 
 Temporal scope is an intrinsic property of Observations, enabling representation
@@ -88,7 +88,7 @@ mobility, environmental quality, and quality of life.
 These outcomes can be examined alongside the instruments and events that structure investment and
 governance, enabling analysis that extends beyond immediate financial return.
 
-This capability is essential for evaluating effectiveness and efficiency of
+This capability is essential for examining effectiveness and efficiency of
 public spending without reducing value to short-term metrics alone.
 
 \subsection{Neutrality and Interpretive Separation}
