--- a/paper01/90_conclusion.tex
+++ b/paper01/90_conclusion.tex
@@ -18,7 +18,7 @@ This design choice prioritizes neutrality and reusability over prescriptive mode
 CAE also depends on the quality and availability of upstream data sources.
 Incomplete, inconsistent, or biased data may limit the conclusions that can be
 drawn from analyses grounded in the ontology.
-However, by making structural relationships explicit, 
+However, by making structural relationships explicit,
 CAE enables such limitations to be surfaced rather than hidden.
 
 Finally, while CAE is designed to be stable over time, real-world institutions,
@@ -27,31 +27,33 @@ The ontology accommodates such evolution through the addition or modification of
 requiring reclassification or type mutation.
 This approach supports incremental extension while preserving semantic continuity.
 
+The adequacy of CAE is evaluated using competency questions
+grounded in real civic datasets rather than axiomatic completeness.
+
 \section{Conclusion}
 \label{sec:conclusion}
 
-This paper has introduced CAE, a categorical ontology of civic accountable
-entities, as a foundational layer for formal semantics of exchange and evidence
-in civic systems.
+This paper has introduced CAE, a formal ontology of civic accountable
+entities designed to represent the structural relationships underlying
+civic accountability.
 By defining a strict, disjoint partition of entity kinds and
-constraining admissible relationships, CAE establishes a stable object universe
+constraining admissible relationships, CAE establishes a stable foundation
 for modeling obligations, authority, actions, and outcomes.
 
-The ontology emphasizes accountability as the unifying principle across domains,
+The ontology emphasizes accountability as the organizing principle,
 enabling representation of long-term public investments, regulatory regimes,
 financial flows, and measured outcomes without collapsing structure into
 interpretation.
-By separating ontological commitment from exchange semantics and
-evidentiary reasoning, CAE supports interoperability, auditability, and
+By separating ontological commitment from domain-specific vocabularies and
+analytic methods, CAE supports interoperability, auditability, and
 longitudinal analysis across jurisdictions and time.
 
-CAE is intended to be extensible, neutral, and durable.
-As a foundational layer, it enables subsequent categorical semantics of the Civic Exchange Protocol and
-Contextual Evidence and Explanations while remaining independent of any
-particular policy position or analytic method.
-In doing so, it provides a structural basis for making civic systems and their outcomes inspectable,
-comparable, and accountable.
-
+CAE is designed to be extensible, neutral, and durable.
+It supports downstream frameworks for modeling exchanges and attaching
+structured explanations to civic decisions, without requiring modification
+of the ontological kinds defined here.
+The six entity kinds and their structural constraints provide a basis for
+making civic systems and their outcomes inspectable, comparable, and accountable.
 
 \section*{Acknowledgements}
 
