--- a/paper02/90_conclusion.tex
+++ b/paper02/90_conclusion.tex
@@ -19,6 +19,11 @@ Although CEP supports adapters for structural variation,
 a full account of schema evolution, including additions,
 deprecations, and long-term migration paths, remains future work.
 
+\subsection{Soundness vs Completeness}
+
+CEP prioritizes semantic soundness of admissible exchanges over completeness
+with respect to all possible civic data patterns.
+
 \paragraph{Multi-Stage and Nested Exchanges.}
 
 Some workflows involve layered or multi-party processes
